--- a/Project/src/index.html
+++ b/Project/src/index.html
@@ -10,8 +10,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-
+// features for third party note sharing here where users to change their note via chrome-plugin
+<!-- View & Edit --><iframe class="taskade-embed" width="100%" height="400" scrolling="yes" frameborder="no" src="https://taskade.com/e/SyzYk4aBcG/embed"></iframe>
 <!--from homepage-->
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
